--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,23 @@ render.experimental.xml
 *.jks
 *.keystore
 
-# Google Services (e.g. APIs or Firebase)
-google-services.json
+android/app/google-services.json
+android/app/src/debug/google-services.json
+android/app/src/release/google-services.json
+
+# Firebase Emulator
+firebase/firestore-data/
+.firebase/
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
+
+# Node.js
+node_modules/
+package-lock.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Android Profiling
 *.hprof
