feat(auth): Add authentication and user profile management
This commit introduces a complete authentication system using Firebase Auth and Firestore.

Key changes include:
- **Firebase Auth Integration**: Implemented login and registration with email and password. Added emulator support for Auth.
- **Login/Register Screens**: Created new composable screens for user login and registration, including input validation and error handling.
- **`AuthViewModel` & `AuthRepository`**: Added the necessary logic to manage authentication state, interact with Firebase, and handle user data.
- **Profile Screen Integration**: The profile screen now displays the authenticated user's data.
- **Logout Functionality**: Added a logout button to the profile header.
- **Protected Routes**: Accessing the profile screen now requires authentication.
- **Firestore Rules**: Updated security rules to protect user and review data based on authentication status.
- **Seeder Update**: The database seeder script now creates users in Firebase Auth alongside their Firestore documents.
- **Dependency Updates**: Updated several AndroidX and Firebase libraries.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "foodforall",
   "version": "1.0.0",
   "scripts": {
-    "emulators": "firebase emulators:start --only firestore --config firebase/firebase.json",
+    "emulators": "firebase emulators:start --only firestore,auth --project foodforall-22d50 --config firebase/firebase.json",
     "seed": "node firebase/seed.js"
   },
   "dependencies": {
