--- a/firebase/firebase.json
+++ b/firebase/firebase.json
@@ -1,7 +1,13 @@
 {
+  "firestore": {
+    "rules": "firestore.rules"
+  },
   "emulators": {
     "firestore": {
       "port": 9000
+    },
+    "auth": {
+      "port": 9099
     },
     "ui": {
       "enabled": true,
