--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,9 +17,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/ic_food_for_all"
+        android:roundIcon="@drawable/ic_food_for_all"
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodForAll"
         android:networkSecurityConfig="@xml/network_security_config">
